smb: Ignore read-only attribute for directories

According to Microsoft Knowledge Base article the read-only attribute
on a folder is being usually ignored by the system and applications.
Let's ignore it in gvfs to avoid compatibility issues.
http://support.microsoft.com/kb/326549/

https://bugzilla.gnome.org/show_bug.cgi?id=598206